--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "db" : {
-    "gearhost" : "server=den1.mysql4.gear.host;port=3306;database=APILego;user id=APILego;password=Xb650-7o-7uY"
+    "gearhost" : "server=den1.mysql4.gear.host;port=3306;database=apilego;user id=apilego;password=Xb650-7o-7uY"
   }
 }
