--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -8,5 +8,9 @@
   },
   "db" : {
     "gearhost" : "server=den1.mysql4.gear.host;port=3306;database=apilego;user id=apilego;password=Xb650-7o-7uY"
+  },
+  "Auth0": {
+    "Domain": "jakes-domain.us.auth0.com",
+    "Audience": "https://Lego"
   }
 }
